Fixed navigation bar covers main context.

--- a/src/main/resources/static/css/shareservice.css
+++ b/src/main/resources/static/css/shareservice.css
@@ -1,5 +1,6 @@
-.body-content {
-    margin-top: 72px;
+
+.container {
+    margin-top: 50px;
 }
 
 td, th {
@@ -52,7 +53,6 @@ label {
    font-size:20px;
    top:0;
    width:100%;
-   height:50px;
    background:#8B0000;
 }
 
@@ -64,6 +64,5 @@ label {
    font-size:20px;
    bottom:0;
    width:100%;
-   height:30px;   /* Height of the footer */
    background:#8B0000;
 }
